	- Alternatively, you can force black background colors for the default
	  or dark scheme with BG0=black or BG1=black, respectively.
	  See the description of the COLORSCHEME variables in the eix manpage
	- Minor fixes/improvements to dark colorscheme
	- Introduce --256l{,0,1} and --256d{,0,1} (obsoletes --256f{,0,1}).
	- Introduce COLOR_{KEYEND,OVERLAYNAME,OVERLAYNAMEEND,NUMBERTEXT}

*eix-0.27.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce %{var[,;]...} for delayed substitution to simplify colors.
	- Fix colorscheme choice for eix-diff
	- Introduce FORMAT_{BEFORE,AFTER}_COLL_EXPAND*
	- Choose scheme 0 if COLORSCHEME{,_ALT} is too high.
	- Fix/improve colorschemes
	- Internal cleanup: remove code duplication in delayed substitution.
	- Support HDEPEND (of >=portage-2.1.11.22 or >=portage-2.2.0_alpha133)
	- New database and xml formats due to HDEPEND, but keep support
	  for reading previous database format 31 of eix-0.27.1.

*eix-0.27.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support 256 color terminals: COLORSCHEME, COLORSCHEME_ALT, TERM_ALT.
	  If you want to use it with screen or tmux use TERM=screen-256colors
	  Currently, only a dark scheme is available on 256 color terminals.
	  Volunteers for a light or solarized color scheme are welcome!
	  If you do not get the dark scheme, although your terminal should
	  support 256 colors or you do not get the standard scheme on a
	  non-256 color terminal, set TERM_ALT in /etc/eixrc correspondingly.
	  If you always want the standard scheme, put COLORSCHEME_ALT=0 there.
	- Introduce --ansi: reset a rather standard ansi 256 color palette.
	- Introduce --256{,f{,0,1},b}: print a 256 color ansi palette.
	- Fix --pipe with versions (regression in 0.26.3)

*eix-0.27.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support USE_EXPAND. Set EIX_USE_EXPAND=false if you do not like it.
	  <{coll,}use*> and FORMAT_{BEFORE,AFTER}_IUSE_EXPAND{,_START,_END}